--- a/DVoiceSend/Base.lproj/LaunchScreen.storyboard
+++ b/DVoiceSend/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -18,28 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favicon" translatesAutoresizingMaskIntoConstraints="NO" id="RQV-Jv-qUt">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="42" id="JH8-DN-Rdk"/>
-                                    <constraint firstAttribute="width" constant="40" id="l3D-TU-6pd"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DCW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGN-79-pAk">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="Wv1-uV-Ec3"/>
-                                    <constraint firstAttribute="width" constant="106" id="wD6-Tv-yOW"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iPhone6-portrait" translatesAutoresizingMaskIntoConstraints="NO" id="kbT-1H-VVN"/>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="OGN-79-pAk" firstAttribute="top" secondItem="RQV-Jv-qUt" secondAttribute="bottom" constant="6" id="3dw-JV-wLm"/>
-                            <constraint firstItem="RQV-Jv-qUt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="FkE-6X-tEn"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="OGN-79-pAk" secondAttribute="bottom" constant="8" id="mE4-fp-V0X"/>
-                            <constraint firstItem="OGN-79-pAk" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vwD-GT-McU"/>
+                            <constraint firstItem="kbT-1H-VVN" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Hiv-xZ-Ptu"/>
+                            <constraint firstItem="kbT-1H-VVN" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="OW7-Mm-mZF"/>
+                            <constraint firstAttribute="trailing" secondItem="kbT-1H-VVN" secondAttribute="trailing" id="Oqs-kS-oQ0"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="kbT-1H-VVN" secondAttribute="bottom" id="xLM-kh-6Eo"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -49,6 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="favicon" width="159" height="147"/>
+        <image name="iPhone6-portrait" width="375" height="667"/>
     </resources>
 </document>
